methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:39: error: Unmatched closing brace '}' ignored here
  }
  ^